# 3DGS-accelerator

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md  azure.yaml  compose.yaml  config.example.yaml  docker-build-podman.sh  docker-build.sh  run-gpu-local.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/instructions/: README.md  docker-batch-e2e.instructions.md  e2e-testing.instructions.md
.github/workflows/: docker-build.yml  e2e-tests.yml
container-test/: config.yaml
docker/: buildx-setup.sh  install-blobfuse2.sh  install-colmap.sh  install-ffmpeg.sh  setup-cross.sh
docs/: 3DGS_CPP_IMPLEMENTATION.md  3dgs-video-processor-prd.md  ARCHITECTURE.md  BACKEND_INSTALLATION.md  BACKEND_VALIDATION.md  CONFIGURATION.md  DEPLOYMENT.md  DOCKER_BUILD.md  DOCKER_VALIDATION.md  GSPLAT_IMPLEMENTATION.md  NERFSTUDIO_INTEGRATION.md  PLUGIN_ARCHITECTURE.md  PREFLIGHT.md  PROGRESS_TRACKING.md  TANKS_AND_TEMPLES_TESTING.md  TODO.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/3DGS/: 01.1-Gaussians.html  (+9 more)
examples/: colmap_integration.rs  test_3dgs_cpp_backend.rs  test_gsplat_backend.rs  test_metrics.rs
infra/: abbreviations.json  main.bicep  main.parameters.json
plugins/: README.md
scripts/: AZURE_TESTING.md  azure-cleanup.sh  azure-setup.sh  azure-test.sh  benchmark-tanks-and-temples.sh  build-multiarch.sh  create_test_colmap_data.py  docker-build-matrix.sh  download-tanks-and-temples.sh  e2e-quickstart.sh  generate-test-videos.sh  gsplat_train.py  mount-azure.sh  run-e2e-tests.sh  validate-backend.sh
src/: error.rs  lib.rs  main.rs
testdata/: README.md  TEST_DATA_SUMMARY.md
tests/: E2E_IMPLEMENTATION.md  E2E_PORT_FIX.md  E2E_TESTING.md  INTEGRATION_TESTS.md  README.md
(+128 files in other folders)
